Add type to print_svg

--- a/.kicad_helpers_config/config.kibot.yaml
+++ b/.kicad_helpers_config/config.kibot.yaml
@@ -75,6 +75,7 @@ outputs:
 
   - name: print_svg
     comment: "Print svg"
+    type: svg
     dir: .
     options:
       output: 'docs/svg/%f-%i%v.%x'
