--- a/.kicad_helpers_config/config.kibot.yaml
+++ b/.kicad_helpers_config/config.kibot.yaml
@@ -61,10 +61,11 @@ outputs:
     comment: "Generate position file"
     type: position
     dir: manufacturing
-    format: 'ASCII' # [ASCII,CSV] Format for the position file.
-    separate_files_for_front_and_back: true
-    units: millimeters # Units used for the positions.
-    output: '%i.%x' # Output file name (%i='top_pos'|'bottom_pos'|'both_pos', %x='pos'|'csv'). Affected by global options.
+    options:
+      format: 'ASCII' # [ASCII,CSV] Format for the position file.
+      separate_files_for_front_and_back: true
+      units: millimeters # Units used for the positions.
+      output: '%i.%x' # Output file name (%i='top_pos'|'bottom_pos'|'both_pos', %x='pos'|'csv'). Affected by global options.
 
   - name: print_sch
     comment: "Print schematic (SVG)"
