--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,8 +35,10 @@ jobs:
         board: '${{ env.PROJECT_NAME }}.kicad_pcb'
     - name: Generate BOM
       run: |
-        mkdir -p manufacturing/default/assembly_photos
-        mkdir -p manufacturing/PCBWay/assembly_photos
+        ls -l
+        ls -l manufacturing
+        sudo mkdir -p manufacturing/default/assembly_photos
+        sudo mkdir -p manufacturing/PCBWay/assembly_photos
         python -m kifield --group -aq -x "${{ env.PROJECT_NAME }}.sch" -i "manufacturing/default/${{ env.PROJECT_NAME }}-BOM.csv"
         ls -l
         ls -l manufacturing/default
