Add commit hash to artifact names

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,16 +33,15 @@ jobs:
         schema: '${{ env.PROJECT_NAME }}.sch'
         # optional - PCB design file
         board: '${{ env.PROJECT_NAME }}.kicad_pcb'
+    - name: Get the commit hash
+      id: get_commit_hash
+      run: echo ::set-output name=GIT_HASH::$(git rev-parse --short "$GITHUB_SHA")
     - name: Generate BOM
       run: |
         sudo chown -R runner:docker manufacturing
-        ls -l
         mkdir -p manufacturing/default/assembly_photos
         mkdir -p manufacturing/PCBWay/assembly_photos
-        python -m kifield --group -aq -x "${{ env.PROJECT_NAME }}.sch" -i "manufacturing/default/${{ env.PROJECT_NAME }}-BOM.csv"
-        ls -l
-        ls -l manufacturing/default
-        ls -l manufacturing/PCBWay
+        python -m kifield --group -aq -x "${{ env.PROJECT_NAME }}.sch" -i "manufacturing/default/${{ env.PROJECT_NAME }}-BOM-.csv"
     - name: Copy assembly photos to manufacturing
       run: |
         cp docs/png/Front.png manufacturing/default/assembly_photos/Front.png
@@ -51,22 +50,22 @@ jobs:
     - name: Upload BOM artifact
       uses: actions/upload-artifact@v2
       with:
-        name: BOM
+        name: BOM-${{ steps.get_commit_hash.outputs.GIT_HASH }}
         path: manufacturing/default/${{ env.PROJECT_NAME }}-BOM.csv
     - name: Upload default manufacturing files
       uses: actions/upload-artifact@v2
       with:
-        name: default manufacturing files
+        name: default-manufacturing-files-${{ steps.get_commit_hash.outputs.GIT_HASH }}
         path: manufacturing/default
     - name: Upload PCBWay manufacturing files
       uses: actions/upload-artifact@v2
       with:
-        name: PCBWay manufacturing files
+        name: PCBWay-manufacturing-files-${{ steps.get_commit_hash.outputs.GIT_HASH }}
         path: manufacturing/PCBWay
     - name: Upload docs
       uses: actions/upload-artifact@v2
       with:
-        name: docs
+        name: docs-${{ steps.get_commit_hash.outputs.GIT_HASH }}
         path: docs
     - name: Get the version
       if: startsWith(github.ref, 'refs/tags/v')
