--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,22 +50,22 @@ jobs:
     - name: Upload BOM artifact
       uses: actions/upload-artifact@v2
       with:
-        name: BOM-${{ steps.get_commit_hash.outputs.GIT_HASH }}
+        name: ${{ env.PROJECT_NAME }}-BOM-${{ steps.get_commit_hash.outputs.GIT_HASH }}
         path: manufacturing/default/${{ env.PROJECT_NAME }}-BOM.csv
     - name: Upload default manufacturing files
       uses: actions/upload-artifact@v2
       with:
-        name: default-manufacturing-files-${{ steps.get_commit_hash.outputs.GIT_HASH }}
+        name: ${{ env.PROJECT_NAME }}-default-manufacturing-files-${{ steps.get_commit_hash.outputs.GIT_HASH }}
         path: manufacturing/default
     - name: Upload PCBWay manufacturing files
       uses: actions/upload-artifact@v2
       with:
-        name: PCBWay-manufacturing-files-${{ steps.get_commit_hash.outputs.GIT_HASH }}
+        name: ${{ env.PROJECT_NAME }}-PCBWay-manufacturing-files-${{ steps.get_commit_hash.outputs.GIT_HASH }}
         path: manufacturing/PCBWay
     - name: Upload docs
       uses: actions/upload-artifact@v2
       with:
-        name: docs-${{ steps.get_commit_hash.outputs.GIT_HASH }}
+        name: ${{ env.PROJECT_NAME }}-docs-${{ steps.get_commit_hash.outputs.GIT_HASH }}
         path: docs
     - name: Get the version
       if: startsWith(github.ref, 'refs/tags/v')
