--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,8 +76,9 @@ jobs:
       env:
           VERSION: ${{ steps.get_version.outputs.VERSION }}
       run: |
-        zip -r ${{ env.PROJECT_NAME }}-manufacturing-files-default-${VERSION}.zip docs manufacturing/default
-        zip -r ${{ env.PROJECT_NAME }}-manufacturing-files-PCBWay-${VERSION}.zip docs manufacturing/PCBWay
+        zip -r ${{ env.PROJECT_NAME }}-manufacturing-files-default-${VERSION}.zip manufacturing/default
+        zip -r ${{ env.PROJECT_NAME }}-manufacturing-files-PCBWay-${VERSION}.zip manufacturing/PCBWay
+        zip -r ${{ env.PROJECT_NAME }}-docs-${VERSION}.zip docs
         mv manufacturing/default/${{ env.PROJECT_NAME }}-BOM.csv ${{ env.PROJECT_NAME }}-BOM-${VERSION}.csv
         zip -rj ${{ env.PROJECT_NAME }}-gerbers-${VERSION}.zip manufacturing/default
     - name: Create release
