--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,7 @@ jobs:
       run: |
         sudo apt install -y zip unzip
         python -m pip install --upgrade pip
-        python -m pip install git+https://github.com/ryanfobel/KiField.git@add-quantity
-        python -m pip install kicad_helpers
+        python -m pip install kicad_helpers>=0.14
     - name: Get the commit hash
       id: get_commit_hash
       run: echo ::set-output name=GIT_HASH::$(git rev-parse --short "$GITHUB_SHA")
